namespace/hml/test-app/hello-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hml
  labels:
    app: hello
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
